--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
         </div> -->
       </div>
       <div class="text-block">
-        <p>Sporting details</p>
+        <p>Sporting Details</p>
         <p class="hide" id="moreText">
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-          nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-          volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-          ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+        Hello There, welcome to our list of sports. Here you can choose between many types of sports
+        and which are also based on the eventtypes.
+        for example, you can choose from event or solo type 
+        and many diffrent games of sports for example. Basketball, Baseball, Volleyball.
+        the main goal of website is to fetch tyhe corret combination that you have chosen for yourself.  
         </p>
         <button type="button" class="btn btn-primary" id="showMoreButton">
           Show More
