--- a/sportdata.html
+++ b/sportdata.html
@@ -105,7 +105,7 @@
     ></script>
 
     <script src="sportdata.js"></script>
-    <script src="sportsfilter.js"></script>
+   
   </body>
 </html>
 
@@ -118,10 +118,8 @@
   <!--combining filters: this should show both check box and dropdown. eg eventsport and basketball.-->
 
 
-  <!-- // 0. write comment for the code.
+  <!-- // 0. write comment for the code.  Done
 // 1.show image in image box.
 // 2.show more show less in description.
 // 3.show collected data in the new page for contact us page.
-// 4.Sticky navbar
-// 5. Home page
-// 6. margin bottom -->
+ -->
