--- a/contact.Html
+++ b/contact.Html
@@ -58,7 +58,7 @@
       <img src="https://www.w3schools.com/w3images/map.jpg" style="width:100%">
     </div>
     <div class="column">
-      <form action="/action_page.php">
+      <form action="thankyou.Html">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
         <label for="lname">Last Name</label>
