--- a/contact.Html
+++ b/contact.Html
@@ -66,7 +66,8 @@
           />
         </div>
         <div class="column">
-          <form action="thankyou.Html" target="_blank">
+          <!-- <form> -->
+            <form action="thankyou.Html" target="_blank">
             <label for="fname">First Name</label>
             <input
               type="text"
@@ -94,7 +95,7 @@
               placeholder="Write something.."
               style="height: 170px"
             ></textarea>
-            <input type="submit" value="Submit" />
+            <input type="submit" value="Submit"/>
           </form>
         </div>
       </div>
