--- a/about.Html
+++ b/about.Html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>About us</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -54,10 +54,8 @@
     </nav>
     <div class="about-section">
       <h1>About Us Page</h1>
-      <p> Welcome to sports list selection</p>
-      <p>
-        Our team here will be happy asist you
-      </p>
+      <p>Welcome to sports list selection</p>
+      <p>Our team here will be happy asist you</p>
     </div>
 
     <h2 style="text-align: center">Our Team</h2>
