--- a/contact.Html
+++ b/contact.Html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>contact Page</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -67,7 +67,7 @@
         </div>
         <div class="column">
           <!-- <form> -->
-            <form action="thankyou.Html" target="_blank">
+          <form action="thankyou.Html" target="_blank">
             <label for="fname">First Name</label>
             <input
               type="text"
@@ -95,7 +95,7 @@
               placeholder="Write something.."
               style="height: 170px"
             ></textarea>
-            <input type="submit" value="Submit"/>
+            <input type="submit" value="Submit" />
           </form>
         </div>
       </div>
