--- a/about.Html
+++ b/about.Html
@@ -53,11 +53,10 @@
       </div>
     </nav>
     <div class="about-section">
-      <h1>About Us Page</h1>
+      <h1>About Us</h1>
       <p>Welcome to sports list selection</p>
       <p>Our team here will be happy asist you</p>
     </div>
-
     <h2 style="text-align: center">Our Team</h2>
     <div class="row">
       <div class="column">
