--- a/sportdata.html
+++ b/sportdata.html
@@ -42,7 +42,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">about us</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.Html">Contact us</a>
