--- a/thankyou.Html
+++ b/thankyou.Html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>thankyou</title>
+    <link rel="stylesheet" href="index.Html" />
+    <link rel="stylesheet" href="thankyou.Css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700"
       rel="stylesheet"
@@ -23,10 +25,12 @@
   <body>
     <header class="site-header" id="header">
       <h1 class="site-header__title" data-lead-id="site-header-title">
-        THANK YOU!  
+        THANK YOU!
       </h1>
-        <h3><span id="fst"></span> <span id="lst"> </span> From <span id="ctr"></span></h3>
-          
+      <h3>
+        <span id="fst"></span> <span id="lst"> </span> From
+        <span id="ctr"></span>
+      </h3>
     </header>
 
     <div class="main-content">
@@ -36,6 +40,8 @@
         do! We really appreciate you giving us a moment of your time today.
         Thanks for being you.
       </p>
+
+      <a href="index.Html">Check out More </a>
     </div>
 
     <footer>
