--- a/about.Html
+++ b/about.Html
@@ -16,14 +16,14 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="index.Html" />
     <link rel="stylesheet" href="index.Css" />
     <link rel="stylesheet" href="about.Css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#index.html">Sport Choice</a>
+        <a class="navbar-brand" href="#index.Html">Sport Choice</a>
         <button
           class="navbar-toggler"
           type="button"
