--- a/about.Html
+++ b/about.Html
@@ -23,7 +23,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#index.Html">Sport Choice</a>
+        <a class="navbar-brand" href="index.Html">Sport Choice</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -43,7 +43,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sportdata.html">List of Sport</a>
+              <a class="nav-link" href="sportdata.Html">List of Sport</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.Html">Contact us</a>
