--- a/sportdata.html
+++ b/sportdata.html
@@ -23,7 +23,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#index.Html">Sport Choice</a>
+        <a class="navbar-brand" href="index.Html">Sport Choice</a>
         <button
           class="navbar-toggler"
           type="button"
