--- a/contact.Html
+++ b/contact.Html
@@ -24,7 +24,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#index.Html">Sport Choice</a>
+       <a class="navbar-brand" href="index.Html">Sport Choice</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,7 +44,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sportdata.html">List of Sport</a>
+              <a class="nav-link" href="sportdata.Html">List of Sport</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.Html">About</a>
