--- a/contact.Html
+++ b/contact.Html
@@ -17,14 +17,14 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
- <link rel="stylesheet" href="index.Html" />
-    <link rel="stylesheet" href="index.Css" />
-    <link rel="stylesheet" href="contact.Css" />
+ <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-       <a class="navbar-brand" href="index.Html">Sport Choice</a>
+       <a class="navbar-brand" href="index.html">Sport Choice</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -39,15 +39,15 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.Html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sportdata.Html">List of Sport</a>
+              <a class="nav-link" href="sportdata.html">List of Sport</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.Html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
           </ul>
         </div>
@@ -67,7 +67,7 @@
         </div>
         <div class="column">
           <!-- <form> -->
-          <form action="thankyou.Html" target="_blank">
+          <form action="thankyou.html" target="_blank">
             <label for="fname">First Name</label>
             <input
               type="text"
