--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.Css" />
-    <link rel="stylesheet" href="sportdata.Css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="sportdata.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-         <a class="navbar-brand" href="index.Html">Sport Choice</a>
+         <a class="navbar-brand" href="index.html">Sport Choice</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,13 +38,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="sportdata.Html">List of Sport</a>
+              <a class="nav-link" href="sportdata.html">List of Sport</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.Html">About us</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.Html">Contact us</a>
+              <a class="nav-link" href="contact.html">Contact us</a>
             </li>
           </ul>
         </div>
