--- a/sportdata.html
+++ b/sportdata.html
@@ -16,14 +16,14 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-     <link rel="stylesheet" href="index.Html" />
-    <link rel="stylesheet" href="index.Css"/>
-    <link rel="stylesheet" href="sportdata.Css" />
+     <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="sportdata.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.Html">Sport Choice</a>
+        <a class="navbar-brand" href="index.html">Sport Choice</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,15 +38,15 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.Html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.Html">About us</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.Html">Contact us</a>
+              <a class="nav-link" href="contact.html">Contact us</a>
             </li>
           </ul>
         </div>
