--- a/thankyou.Html
+++ b/thankyou.Html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>thankyou</title>
-    <link rel="stylesheet" href="index.Html" />
-    <link rel="stylesheet" href="thankyou.Css" />
+    <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" href="thankyou.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700"
       rel="stylesheet"
@@ -41,7 +41,7 @@
         Thanks for being you.
       </p>
 
-      <a href="index.Html">Check out More </a>
+      <a href="index.html">Check out More </a>
     </div>
 
     <footer>
